Manage additionnal pics with flex. Overflow fixed for cover list item.

--- a/src/app/coverview/coverview.component.css
+++ b/src/app/coverview/coverview.component.css
@@ -37,9 +37,15 @@ i {
   height: 0;
 }
 
+.additionalPics {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .previewimage {
-	margin-top: 2px;
-	margin-right: 2px;
-	width: 100px;
-	height: 100px;
+  display: flex;
+  flex: 1 1 50px;
+	max-width: 100px;
+	max-height: 100px;
 }
