--- a/src/app/recordslist/recordslist.component.css
+++ b/src/app/recordslist/recordslist.component.css
@@ -212,6 +212,7 @@
 	border: 2px solid black;
 	margin-right: 6px;
 	margin-bottom: 2px;
+	overflow: hidden;
 }
 
 
